# heartwood-esp32

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  llms.txt  sdkconfig.defaults  this-is-my-goal.md
.github/workflows/: ci.yml  deploy-site.yml  release.yml
.playwright-mcp/: page-2026-04-03T12-36-06-312Z.yml  page-2026-04-03T12-36-14-331Z.yml  page-2026-04-03T12-36-54-880Z.yml  page-2026-04-03T12-37-45-732Z.yml  page-2026-04-03T12-38-00-107Z.yml
bridge/: Cargo.toml
bridge/src/: api.rs  main.rs
common/: Cargo.toml
common/.cargo/: config.toml
common/src/: backup.rs  deadline.rs  derive.rs  encoding.rs  frame.rs  hex.rs  kinds.rs  lib.rs  mgmt.rs  mnemonic.rs  net_config.rs  nip04.rs  nip44.rs  nip46.rs  ota_sign.rs  persistent_state.rs  policy.rs  restore.rs  seed_cipher.rs  types.rs  validate.rs
docs/: 2026-06-19-web-flasher-flash-and-configure.md  2026-06-24-multi-board-display-port.md  2026-07-02-pin-seed-encryption-design.md  BENCH-v0.10.1.md  HARDWARE-TEST-CHECKLIST.md  PERSISTENT-STATE.md  SECURITY-MODEL.md  architecture.md  cat-sprite-reference.txt  next-session-prompt.md  ota-signing.md
docs/memory/: MEMORY.md  feedback_grant_honesty.md  feedback_grant_safe_design.md  feedback_hardware_safety.md  feedback_no_efuse.md  feedback_no_em_dashes.md  feedback_oled_diagnostics.md  feedback_oled_font.md  project_coercion_stack_roadmap.md  project_heartwood_grant_timing.md  project_heartwood_tiers.md  project_phase2_status.md  project_signet_demo.md  project_web_ui.md
docs/plans/: 2026-04-03-flash-once-firmware-design.md  2026-04-03-flash-once-implementation.md  2026-04-03-hsm-plan.md  2026-04-03-method-implementations.md  2026-04-03-provisioning-plan.md  2026-04-03-signing-oracle-plan.md  2026-04-04-nip46-hardening.md  2026-04-05-true-zero-trust-bridge.md  2026-04-06-heartwoodd-soft-mode-design.md  2026-04-06-heartwoodd-soft-mode-plan.md
docs/specs/: 2026-04-03-hsm-design.md  2026-04-03-provisioning-design.md  2026-04-03-signing-oracle-design.md  2026-04-06-connect-slots-design.md
docs/sprites/: body.txt  legs-stride-1.txt  legs-stride-2.txt  legs-stride-3.txt  legs-stride-4.txt  tail-down.txt  tail-up.txt
docs/superpowers/plans/: 2026-04-06-connect-slots.md  2026-04-06-hd-cat-boot-animation.md
docs/superpowers/specs/: 2026-04-04-bridge-management-api-design.md  2026-04-06-hd-cat-boot-animation-design.md
esp8266-firmware/: .gitignore  Cargo.toml  FLASHING.md  NOTES.md  provision.py
esp8266-firmware/.cargo/: config.toml
esp8266-firmware/src/: bech32.rs  button.rs  crypto.rs  frame.rs  heap.rs  main.rs  oled.rs  selftest.rs  sign_path.rs  storage.rs
esp8266-spike/: Cargo.toml  README.md
esp8266-spike/.cargo/: config.toml
esp8266-spike/src/: lib.rs
firmware/: Cargo.toml  build.rs  ota-release-pubkey.hex  partitions-4mb.csv  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.c6  sdkconfig.defaults.heltec-v3  sdkconfig.defaults.heltec-v4  sdkconfig.defaults.tdisplay
firmware/.cargo/: config.toml
firmware/src/: approval.rs  backup.rs  board.rs  boot_config.rs  button.rs  cat_sprites.rs  connslot.rs  crash_crumb.rs  identity_cache.rs  identity_meta.rs  jd9853.rs  layout.rs  log_quiet.rs  main.rs  management_challenge.rs  masters.rs  net_config_store.rs  nip46_handler.rs  nvs.rs  oled.rs  ota.rs  palette.rs  persistent_wipe.rs  personas.rs  pin.rs  policy.rs  protocol.rs  provision.rs  relay.rs  release_key.rs  serial.rs  session.rs  sign.rs  st7789.rs  transport.rs  wifi_scan.rs  wifi_spike.rs
heartwoodd/: Cargo.toml
heartwoodd/src/: api.rs  backup.rs  main.rs  relay.rs  serial.rs
heartwoodd/src/backend/: mod.rs  serial.rs  soft.rs  soft_store.rs
ota/: Cargo.toml
ota-sign/: Cargo.toml
ota-sign/src/: main.rs
ota/src/: main.rs
provision/: Cargo.toml  README.md
provision/.cargo/: config.toml
provision/src/: main.rs
scripts/: build-firmware.sh  extract-sprites.py  gen-boot-gif.py  install-hooks.sh  setup-hsm.py
scripts/git-hooks/: pre-commit
sign-test/: Cargo.toml
sign-test/.cargo/: config.toml
sign-test/src/: main.rs
site/: index.html  styles.css
site/deploy/: heartwood.Caddyfile
sprite-gen/: Cargo.toml
sprite-gen/src/: main.rs
src/: derive.rs  encoding.rs  main.rs  types.rs
ui-preview/: Cargo.toml
ui-preview/src/: main.rs
