[package]
name = "heartwood-common"
version = "0.1.0"
edition = "2021"
description = "Shared crypto for heartwood-esp32 — derivation, encoding, types"

[dependencies]
k256 = { version = "0.13", default-features = false, features = ["schnorr", "arithmetic", "ecdh"], optional = true }
secp256k1 = { version = "0.29", default-features = false, features = ["alloc"], optional = true }
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
zeroize = { version = "1", default-features = false, features = ["derive"] }
bech32 = { version = "0.11", default-features = false, features = ["alloc"] }
crc32fast = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
serde_json = { version = "1", default-features = false, features = ["alloc"], optional = true }
hkdf = { version = "0.12", default-features = false, optional = true }
base64 = { version = "0.22", default-features = false, features = ["alloc"], optional = true }
chacha20 = { version = "0.9", default-features = false, optional = true }
aes = { version = "0.8", default-features = false, optional = true }
cbc = { version = "0.1", default-features = false, features = ["alloc", "block-padding"], optional = true }
# On-device mnemonic generation. Only bip39 (wordlist + PBKDF2 seed) — the BIP-32
# derivation is hand-rolled on top of the existing secp256k1 to avoid pulling
# k256 + a second secp256k1 (bip32's deps), which overflowed the 2 MB OTA slot.
bip39 = { version = "2", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["k256-backend"]
k256-backend = ["dep:k256"]
secp256k1-backend = ["dep:secp256k1"]
nip46 = ["dep:serde", "dep:serde_json"]
nip44 = ["dep:chacha20", "dep:hkdf", "dep:base64"]
nip04 = ["dep:aes", "dep:cbc", "dep:base64"]
# On-device recovery-phrase generation (entropy -> BIP-39 mnemonic -> tree root).
# Needs secp256k1 for the hand-rolled BIP-32 scalar arithmetic.
mnemonic-gen = ["dep:bip39", "secp256k1-backend"]
# Convenience alias for secp256k1 backend with full feature set (used by firmware)
firmware = ["secp256k1-backend", "nip46", "nip44", "nip04", "mnemonic-gen"]
