# Heartwood ESP8266 tethered-signer firmware (compile-only scaffold).
#
# Unlike esp8266-spike/ (a staticlib that only proves the crypto COMPILES), this
# is a real `no_main` binary: reset vector + entry via xtensa-lx106-rt, a global
# allocator, raw UART0, and the HW serial frame protocol. The goal of this
# stage is that it COMPILES AND LINKS into a flashable image — the runtime
# (does k256 fault on lx106's unaligned access?) is a separate on-hardware step.
[package]
name = "heartwood-esp8266"
version = "0.0.1"
edition = "2021"
publish = false

[[bin]]
name = "heartwood-esp8266"
path = "src/main.rs"
test = false
bench = false

[dependencies]
# ESP8266 HAL — bundles the runtime (xtensa-lx-rt 0.12, the maintained shared
# xtensa runtime, NOT the dead xtensa-lx106-rt 0.1.2), the linker scripts, and
# the UART/GPIO/timer peripherals. Archived but builds on the `esp` channel.
esp8266-hal = "0.5"
# Panic handler for bare metal (halt-on-panic).
panic-halt = "0.2"
# Non-blocking I/O helper for the UART read/write loop.
nb = "1"
# CRC32 for the HW serial frame protocol (no_std software impl).
crc32fast = { version = "1", default-features = false }
# BIP-340 Schnorr (pubkey derivation + signing). no_std, no-alloc — the exact
# crate the esp8266-spike proved compiles for xtensa-lx106.
k256 = { version = "0.13", default-features = false, features = ["schnorr"] }
# Shared NIP-44 / NIP-46 / envelope logic (converted to no_std), k256 backend —
# reuse the exact data-plane crypto the ESP32 firmware uses. (Pulls k256's
# arithmetic + ecdh features for NIP-44 ECDH.)
heartwood-common = { path = "../common", default-features = false, features = ["k256-backend", "nip44", "nip46"] }
# Serialise the signed kind:24133 envelope event (no_std + alloc).
serde_json = { version = "1", default-features = false, features = ["alloc"] }
# Heap allocator for the data plane (NIP-44 buffers, JSON). The lx106 has no
# `alloc` without one; the inline 0x10 sign path needs it.
embedded-alloc = "0.6"
# critical-section backs the allocator's locking; we provide the impl over the
# xtensa interrupt enable/disable primitives.
critical-section = { version = "1", features = ["restore-state-u32"] }
xtensa-lx = { version = "0.7", features = ["esp8266"] }
# OLED (SSD1306, 128x64) over bit-banged I2C — the ESP8266 has no hardware I2C.
# Pinned to the embedded-hal 0.2 generation esp8266-hal targets (ssd1306 0.10
# needs embedded-hal 1.0). embedded-graphics renders the npub + the sign prompt.
embedded-hal = "0.2"
ssd1306 = "0.7"
embedded-graphics = "0.7"

[profile.release]
opt-level = "z"
panic = "abort"
codegen-units = 1
lto = true

[profile.dev]
panic = "abort"

# xtensa-lx-rt 0.12.0's esp8266 exception vectors use the old naked-function form
# `asm!(..., options(noreturn))`, which the modern esp toolchain rejects (E0787 —
# naked bodies must use `naked_asm!`). The vendored copy applies that one-line-per-
# site conversion (13 sites, esp8266 only); nothing else is changed.
[patch.crates-io]
xtensa-lx-rt = { path = "vendor/xtensa-lx-rt" }
