[package]
name = "heartwood-esp32"
version = "0.1.0"
edition = "2021"
description = "nsec-tree signing device firmware for Heltec WiFi LoRa 32 V4"

[dependencies]
heartwood-common = { path = "../common" }

# Crypto (for signing — derivation is in common)
k256 = { version = "0.13", default-features = false, features = ["schnorr", "arithmetic"] }
signature = { version = "2", default-features = false }
zeroize = { version = "1", default-features = false, features = ["derive"] }

# Serial protocol
crc32fast = "1"

# ESP-IDF std framework
esp-idf-svc = { version = "0.52", features = ["binstart"] }
esp-idf-hal = "0.46"

# OLED display
ssd1306 = "0.9"
embedded-graphics = "0.8"

# Logging
log = "0.4"

[build-dependencies]
embuild = "0.33"
