[package]
name = "heartwood-esp32"
version = "0.10.8"
edition = "2021"
description = "nsec-tree signing device firmware for Heltec WiFi LoRa 32 (V3 and V4)"
license = "MIT"

[features]
# Default build targets the Heltec V4 (native USB-Serial-JTAG on GPIO19/20).
default = ["heltec-v4"]
# Heltec WiFi LoRa 32 V4 -- USB-C wired to ESP32-S3 native USB pins.
heltec-v4 = []
# Heltec WiFi LoRa 32 V3 -- USB-C wired through a CP2102 bridge to UART0
# (GPIO43 TX / GPIO44 RX). Mutually exclusive with heltec-v4.
heltec-v3 = []
# Colour ST7789 TFT display backend (T-Display, ESP32-C6). Colour-panel boards
# enable this; it pulls in the mipidsi driver. Mono-OLED boards (Heltec) leave
# it off and keep the ssd1306 backend. `st7789-check` compiles the backend
# module on a mono board for CI/type-checking without swapping the display.
st7789 = ["dep:mipidsi"]
st7789-check = ["st7789"]
# LilyGO / TENSTAR T-Display: classic ESP32-D0WD + ST7789 240x135 colour TFT.
# Built for the xtensa-esp32-espidf target (see scripts/build-firmware.sh).
tdisplay = ["st7789"]
# Waveshare ESP32-C6-Touch-LCD-1.47: ESP32-C6 (RISC-V rv32imac) + JD9853 172×320
# portrait IPS panel. Built for the riscv32imac-esp-espidf target.
# Note: the display controller is JD9853 (NOT ST7789); the jd9853 module sends
# the vendor init sequence directly over raw SPI without mipidsi.
c6 = []

[dependencies]
heartwood-common = { path = "../common", default-features = false, features = ["nip46", "nip44", "nip04", "secp256k1-backend", "mnemonic-gen", "ota-sign", "seed-encrypt"] }

# Crypto — libsecp256k1 C FFI (alignment-safe on Xtensa, unlike k256)
secp256k1 = { version = "0.29" }
sha2 = "0.10"
zeroize = { version = "1", default-features = false, features = ["derive"] }

# Serial protocol
crc32fast = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Relay management: avatar bytes travel base64-encoded inside NIP-44 requests.
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

# ESP-IDF std framework
esp-idf-svc = { version = "0.52", features = ["binstart"] }
esp-idf-hal = "0.46"

# OLED display
ssd1306 = "0.9"
embedded-graphics = "0.8"

# ST7789 colour TFT driver -- only compiled in for the `st7789` feature
# (colour-panel boards). Mono-OLED Heltec builds never pull it in.
mipidsi = { version = "0.10", optional = true }

# Logging
log = "0.4"

[build-dependencies]
embuild = "0.33"

# Size-optimise the release binary. The WiFi-standalone + on-device-generation
# firmware must fit the 2 MB ota_0 slot; default release (opt-level=3) overflowed
# it. opt-level="z" + a single codegen unit claws it back. (LTO is NOT used —
# it breaks the secp256k1-sys C build under the xtensa -mlongcalls toolchain.)
[profile.release]
opt-level = "z"
codegen-units = 1
