[package]
name = "heartwoodd"
version = "0.2.0"
edition = "2021"
description = "Heartwood daemon -- Nostr signing service for Pi (Soft mode) and ESP32 (Hard mode)"

[dependencies]
heartwood-common = { path = "../common", features = ["nip46", "nip44"] }
nostr-connect = "0.44"
nostr = { version = "0.44", features = ["std", "nip44", "nip46"] }
nostr-sdk = "0.44"
nix = { version = "0.29", features = ["fs", "term"] }
libc = "0.2"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
urlencoding = "2"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
sha2 = "0.10"
hmac = "0.12"
argon2 = "0.5"
chacha20poly1305 = "0.10"
uuid = { version = "1", features = ["v4"] }
getrandom = "0.2"
base64 = "0.22"
zeroize = "1"
k256 = { version = "0.13", features = ["ecdsa", "schnorr"] }

[dev-dependencies]
tempfile = "3"
