[package]
name = "heartwood-sign-test"
version = "0.1.0"
edition = "2021"
description = "Test harness for heartwood-esp32 signing oracle"

[dependencies]
heartwood-common = { path = "../common", features = ["nip46"] }
serialport = "4"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
bech32 = "0.11"
